--- a/AndroidBoundExample/src/main/res/values/strings.xml
+++ b/AndroidBoundExample/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_LVWithObjects">List View With Objects</string>
 </resources>
