--- a/AndroidBoundExample/src/main/res/values/strings.xml
+++ b/AndroidBoundExample/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_LVWithObjects">List View With Objects</string>
+    <string name="title_activity_RVWithObjects">Recycler View With Objects</string>
 </resources>
